# trait_inheritance_rs

./: Cargo.toml  Readme.md
src/: main.rs
src/example/: mod.rs
