[package]
name = "trait_inheritance_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
serde = "1.0.137"

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]
